fixing issues: replace generic exception